# workload_assessment_agent

./: .gitignore  AGENT.md  LICENSE  README.md  config.example.toml  harness.py  main.py  pyproject.toml
agents/: __init__.py  algorithm_agent.md  app_agent.md  backend_agent.md  dispatcher_agent.md  frontend_agent.md  ops_agent.md  presale_agent.md  product_agent.md  testing_agent.md  ui_agent.md
core/: __init__.py  config.py  llm.py  merge.py  module.py  parser.py  prompts.py  session.py  validation.py
output/: __init__.py  excel.py  report.py
